# ai-cookbook

./: .dockerignore  Dockerfile  README.md  example.env  pyproject.toml  requirements.txt
.github/workflows/: docker-images.yml  ecr-images.yml  load-hn-knowledge-base.yml  validate.yml
ai/: knowledge_base.py  settings.py  storage.py
ai/assistants/: image.py  pdf_auto.py  pdf_rag.py  vision.py  website_auto.py  website_rag.py
api/: settings.py
app/: Home.py
arxiv_ai/: app.py  assistant.py  knowledge.py  storage.py  test.py  test_tools.py  tools.py
db/: README.md
hn_ai/: api.py  app.py  assistant.py  knowledge.py  load_knowledge_base.py  search.py  storage.py  test.py  tools.py
medical_ai/: app.py  assistants.py  generate_report.py  search.py
notebooks/: basics.ipynb  vision.ipynb
pdf_ai/: app.py  assistant.py  knowledge.py  storage.py  test.py  test_tools.py  tools.py
phi-code-bot/: README.md  bot.py  events.py  knowledge_base.py  main.py  ratelimit.py  requirements.txt
recipe/: assistant_runs_from_db.py  assistant_with_storage.py  auto_assistant.py  auto_conversation.py  conversation_with_storage.py  csv_assistant_openai.py  data_assistant.py  duckdb_agent.py  langchain_retriever.py  movie_assistant.py  movie_generator.py  python_agent.py  rag_assistant.py  rag_conversation.py  recipe_assistant_openai.py  short_story.py  simple_conversation.py  story_assistant.py  trending_on_hn.py  vision.py
recipes/: vision.py
scripts/: build_dev_image.sh  build_jupyter_image.sh  build_prd_image.sh  validate.sh
utils/: log.py
website_ai/: app.py  assistant.py  knowledge.py  storage.py  test.py  test_tools.py  tools.py
workspace/: dev_resources.py  prd_resources.py  settings.py
(+38 files in other folders)
